--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# generic files to ignore
+# Generic files to ignore
 *.class
 
 # Eclipse
@@ -28,5 +28,5 @@ classes/
 *.war
 *.ear
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
