add redis storage module; continue with netty mqtt handler

--- a/mithril-mqtt-broker/build.gradle
+++ b/mithril-mqtt-broker/build.gradle
@@ -3,8 +3,9 @@ apply plugin: 'application'
 mainClassName = "com.github.longkerdandy.mithril.mqtt.broker.MqttBroker"
 
 dependencies {
-    // project api
+    // project
     compile project(':mithril-mqtt-api')
+    compile project(':mithril-mqtt-storage-redis')
 
     // netty
     compile 'io.netty:netty-all:5.0.0.Alpha2'
