--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'mithril-mqtt'
 
 include 'mithril-mqtt-broker'
 include 'mithril-mqtt-api'
+include 'mithril-mqtt-storage-redis'
 
