add json util class; add in-flight test

--- a/mithril-mqtt-storage-redis/build.gradle
+++ b/mithril-mqtt-storage-redis/build.gradle
@@ -4,4 +4,8 @@ dependencies {
 
     // netty
     compile 'biz.paluch.redis:lettuce:4.0.Beta2'
+
+    // json
+    testCompile 'com.fasterxml.jackson.core:jackson-core:2.6.1'
+    testCompile 'com.fasterxml.jackson.core:jackson-databind:2.6.1'
 }
