Using modified version of netty-mqtt-codec

--- a/mithril-mqtt-api/build.gradle
+++ b/mithril-mqtt-api/build.gradle
@@ -1,4 +1,7 @@
 dependencies {
+    // netty
+    compile 'io.netty:netty-codec:4.1.0.Beta7'
+
     // uuid
     compile 'com.fasterxml.uuid:java-uuid-generator:3.1.4'
 }
