--- a/mithril-mqtt-broker/build.gradle
+++ b/mithril-mqtt-broker/build.gradle
@@ -6,4 +6,7 @@ dependencies {
     // project
     compile project(':mithril-mqtt-api')
     compile project(':mithril-mqtt-storage-redis')
+
+    // netty
+    compile 'io.netty:netty-transport:4.1.0.Beta7'
 }
