Add processor module; Add CONNECT processor logic;

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,8 @@
 rootProject.name = 'mithril-mqtt'
 
-include 'mithril-mqtt-broker'
 include 'mithril-mqtt-api'
+include 'mithril-mqtt-broker'
+include 'mithril-mqtt-processor'
 include 'mithril-mqtt-storage-redis'
 include 'mithril-mqtt-communicator-kafka'
 
