--- a/mithril-mqtt-processor/build.gradle
+++ b/mithril-mqtt-processor/build.gradle
@@ -6,4 +6,6 @@ dependencies {
     // project
     compile project(':mithril-mqtt-api')
     compile project(':mithril-mqtt-storage-redis')
+
+    runtime project(':mithril-mqtt-communicator-kafka')
 }
