--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'mithril-mqtt-broker'
 include 'mithril-mqtt-processor'
 include 'mithril-mqtt-storage-redis'
 include 'mithril-mqtt-communicator-kafka'
+include 'mithril-mqtt-authenticator-dummy'
 
