--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ subprojects {
     group 'com.github.longkerdandy.mithril'
 
     // Version
-    version '0.1.0'
+    version '0.8.0.SNAPSHOT'
 
     // JDK
     sourceCompatibility = 1.8
