--- a/mithril-mqtt-broker/build.gradle
+++ b/mithril-mqtt-broker/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'application'
 
 mainClassName = "com.github.longkerdandy.mithril.mqtt.broker.MqttBroker"
 
+// If your application requires a specific set of JVM settings or system properties, you can configure the applicationDefaultJvmArgs property.
+// These JVM arguments are applied to the run task and also considered in the generated start scripts of your distribution.
+// logback configuration file location
+applicationDefaultJvmArgs = ["-Dlogback.configurationFile=config/logback.xml"]
+
 dependencies {
     // project
     compile project(':mithril-mqtt-api')
