Finished hazelcast communicator; Add logback file appender;

--- a/mithril-mqtt-communicator-hazelcast/build.gradle
+++ b/mithril-mqtt-communicator-hazelcast/build.gradle
@@ -4,4 +4,5 @@ dependencies {
 
     // hazelcast
     compile 'com.hazelcast:hazelcast:3.5.3'
+    compile 'com.hazelcast:hazelcast-client:3.5.3'
 }
