Add maven plugin, SNAPSHOT can publish to maven local; Related issue #4;

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 subprojects {
 
     apply plugin: 'java'
+    apply plugin: 'maven'
 
     // Group Id
     group 'com.github.longkerdandy.mithril'
