--- a/mithril-mqtt-storage-redis/build.gradle
+++ b/mithril-mqtt-storage-redis/build.gradle
@@ -4,6 +4,7 @@ dependencies {
 
     // redis
     compile 'biz.paluch.redis:lettuce:4.0.Final'
+    compile 'org.redisson:redisson:2.1.3'
 
     // json
     testCompile 'com.fasterxml.jackson.core:jackson-core:2.6.1'
