--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ subprojects {
     group 'com.github.longkerdandy.mithril'
 
     // Version
-    version '1.0.0.SNAPSHOT'
+    version '1.0.0.Alpha1'
 
     // JDK
     sourceCompatibility = 1.8
