--- a/mithril-mqtt-broker/build.gradle
+++ b/mithril-mqtt-broker/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     compile 'io.netty:netty-transport:4.1.0.Beta7'
 
     // metrics
-    compile 'io.dropwizard.metrics:metrics-core:3.1.0'
+    compile 'org.influxdb:influxdb-java:2.0'
 }
 
 startScripts {
