--- a/mithril-mqtt-http/build.gradle
+++ b/mithril-mqtt-http/build.gradle
@@ -21,8 +21,10 @@ dependencies {
     // metrics
     runtime project(':mithril-mqtt-metrics-influxdb')
 
-    // netty
-    compile 'io.netty:netty-transport:4.1.0.Beta8'
+    // dropwizard
+    compile 'io.dropwizard:dropwizard-core:0.9.1'
+    compile 'io.dropwizard:dropwizard-auth:0.9.1'
+    compile 'commons-validator:commons-validator:1.5.0'
 }
 
 startScripts {
