Add Netty's new Epoll transport to MQTT broker
Since 4.0.16, Netty provides the native socket transport for Linux using JNI.
This transport has higher performance and produces less garbage.
MQTT broker now support this feature.

Update Netty related dependencies to 4.1.0.CR2.

--- a/mithqtt-broker/build.gradle
+++ b/mithqtt-broker/build.gradle
@@ -22,7 +22,8 @@ dependencies {
     runtime project(':mithqtt-metrics-influxdb')
 
     // netty
-    compile 'io.netty:netty-transport:4.1.0.Beta8'
+    compile 'io.netty:netty-transport:4.1.0.CR2'
+    compile 'io.netty:netty-transport-native-epoll:4.1.0.CR2'
 }
 
 startScripts {
