--- a/mithqtt-api/build.gradle
+++ b/mithqtt-api/build.gradle
@@ -1,6 +1,6 @@
 dependencies {
     // netty
-    compile 'io.netty:netty-codec:4.1.0.Beta8'
+    compile 'io.netty:netty-codec:4.1.0.CR2'
 
     // uuid
     compile 'com.fasterxml.uuid:java-uuid-generator:3.1.4'
