Create a RabbitMQ based communicator implementation
Provide an alternative choice to communicator implementations.
RabbitMQ is a mature message queue which scales well.

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'mithqtt-http'
 include 'mithqtt-storage-redis'
 include 'mithqtt-communicator-hazelcast'
 include 'mithqtt-communicator-kafka'
+include 'mithqtt-communicator-rabbitmq'
 include 'mithqtt-authenticator-dummy'
 include 'mithqtt-metrics-influxdb'
 
