Add mithqtt-communicator-rabbitmq to broker and http's dependency

--- a/mithqtt-broker/build.gradle
+++ b/mithqtt-broker/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 
     // communicator
     runtime project(':mithqtt-communicator-hazelcast')
+    runtime project(':mithqtt-communicator-rabbitmq')
     runtime project(':mithqtt-communicator-kafka')
 
     // metrics
