--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ subprojects {
     group 'com.github.longkerdandy'
 
     // Version
-    version '1.0.0.Beta1-SNAPSHOT'
+    version '1.0.0.Beta1'
 
     // JDK
     sourceCompatibility = 1.8
