--- a/mithqtt-broker/build.gradle
+++ b/mithqtt-broker/build.gradle
@@ -4,7 +4,7 @@ mainClassName = "com.github.longkerdandy.mithqtt.broker.MqttBroker"
 
 // If your application requires a specific set of JVM settings or system properties, you can configure the applicationDefaultJvmArgs property.
 // These JVM arguments are applied to the run task and also considered in the generated start scripts of your distribution.
-applicationDefaultJvmArgs = ["-Dlogback.configurationFile=config/logback.xml", "-Dhazelcast.config=config/hazelcast.xml"]
+applicationDefaultJvmArgs = ["-Dlogback.configurationFile=config/logback.xml"]
 
 dependencies {
     // project
@@ -14,17 +14,9 @@ dependencies {
     // authenticator
     runtime project(':mithqtt-authenticator-dummy')
 
-    // communicator
-    runtime project(':mithqtt-communicator-hazelcast')
-    runtime project(':mithqtt-communicator-rabbitmq')
-    runtime project(':mithqtt-communicator-kafka')
-
-    // metrics
-    runtime project(':mithqtt-metrics-influxdb')
-
     // netty
-    compile 'io.netty:netty-transport:4.1.0.Final'
-    compile 'io.netty:netty-transport-native-epoll:4.1.0.Final'
+    compile 'io.netty:netty-transport:4.1.3.Final'
+    compile 'io.netty:netty-transport-native-epoll:4.1.3.Final'
 
     // nats
     compile 'io.nats:jnats:0.4.1'
