Abstract Cluster implementation into API interface
Add Cluster API interface in mithqtt-api module;
Add mithqtt-cluster-nats module which is a NATS Server based Cluster implementation;
Update broker and http related source code and configuration;

--- a/mithqtt-http/build.gradle
+++ b/mithqtt-http/build.gradle
@@ -14,13 +14,13 @@ dependencies {
     // authenticator
     runtime project(':mithqtt-authenticator-dummy')
 
+    // cluster
+    runtime project(':mithqtt-cluster-nats')
+
     // dropwizard
     compile 'io.dropwizard:dropwizard-core:0.9.3'
     compile 'io.dropwizard:dropwizard-auth:0.9.3'
     compile 'commons-validator:commons-validator:1.5.1'
-
-    // nats
-    compile 'io.nats:jnats:0.4.1'
 }
 
 startScripts {
