--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'mithqtt-broker'
 include 'mithqtt-http'
 include 'mithqtt-storage-redis'
 include 'mithqtt-authenticator-dummy'
+include 'mithqtt-cluster-nats'
 
