--- a/mithqtt-broker/build.gradle
+++ b/mithqtt-broker/build.gradle
@@ -14,12 +14,12 @@ dependencies {
     // authenticator
     runtime project(':mithqtt-authenticator-dummy')
 
+    // cluster
+    runtime project(':mithqtt-cluster-nats')
+
     // netty
     compile 'io.netty:netty-transport:4.1.3.Final'
     compile 'io.netty:netty-transport-native-epoll:4.1.3.Final'
-
-    // nats
-    compile 'io.nats:jnats:0.4.1'
 }
 
 startScripts {
