--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+apply plugin: 'com.github.ben-manes.versions'
+
 subprojects {
 
     apply plugin: 'java'
@@ -27,9 +29,9 @@ subprojects {
         compile 'commons-configuration:commons-configuration:1.10'
 
         // logger
-        compile 'org.slf4j:slf4j-api:1.7.13'
-        compile 'ch.qos.logback:logback-core:1.1.3'
-        compile 'ch.qos.logback:logback-classic:1.1.3'
+        compile 'org.slf4j:slf4j-api:1.7.21'
+        compile 'ch.qos.logback:logback-core:1.1.7'
+        compile 'ch.qos.logback:logback-classic:1.1.7'
 
         // junit
         testCompile 'junit:junit:4.12'
@@ -37,5 +39,29 @@ subprojects {
         // mock
         compile 'org.mockito:mockito-all:1.10.19'
         compile 'org.easymock:easymock:3.4'
+    }
+}
+
+// gradle version plugin
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
+    }
+}
+
+dependencyUpdates.resolutionStrategy = {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
     }
 }
