--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ subprojects {
     group 'com.github.longkerdandy'
 
     // Version
-    version '1.1.0.Alpha1'
+    version '1.1.0.Beta1-SNAPSHOT'
 
     // JDK
     sourceCompatibility = 1.8
